Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85470

[REG: 5.14.2->5.15.0]: When capturing the camera which is showing via a QVideoWidget it will never emit the imageCaptured signal

XMLWordPrintable

    • macOS
    • cdd87907722aff14c393dba02b7e43c924b60d06 (qt/qtmultimedia/dev) fd2bb11b9c9f4a0cff99ed21d9e5291ff5ec065d (qt/qtmultimedia/5.15)

      [REG: 5.14.2->5.15.0]: When capturing the camera which is showing via a QVideoWidget it will never emit the imageCaptured signal. It will capture to a file, but it should be making the image available as it did in 5.14.2.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            valentyn.doroshchuk Valentyn Doroshchuk
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes