AVF: Introduce QCameraCaptureDestinationControl_iid

Can be used like:
QCameraImageCapture->setCaptureDestination(
    QCameraImageCapture::CaptureToBuffer | QCameraImageCapture::CaptureToFile);

Both CaptureToBuffer and CaptureToFile are supported.

If CaptureToBuffer is requested, then it sends imageAvailble signal
If CaptureToFile is requested, it sends imageSaved

imageCaptured is sent only if there is the video frame available.
(e.g. when abstract video surface is used as viewfinder)

Fixes: QTBUG-85470
Change-Id: If22281e4d0eacfb0d38f8b1c8b676191817f592e
Reviewed-by: Ihor Dutchak <ihor.youw@gmail.com>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit cdd87907722aff14c393dba02b7e43c924b60d06)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>